--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "banner-utility",
+  "proxy": "http://localhost:8000",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,13 +12,22 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "axios": "^1.6.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "fabric": "^5.3.0",
+    "lucide-react": "^0.383.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-image-marker": "^1.2.0",
-    "react-share": "^5.0.3"
+    "react-share": "^5.0.3",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
