--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banner-utility",
-  "proxy": "http://localhost:8000",
+  "proxy": "http://marketing-module-be.fundexpert.in",
   "version": "0.1.0",
   "private": true,
   "scripts": {
